--- a/themes/PaperMod/layouts/_default/list.html
+++ b/themes/PaperMod/layouts/_default/list.html
@@ -41,7 +41,8 @@
 {{- $pages := union .RegularPages .Sections }}
 
 {{- if .IsHome }}
-{{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }}
+<!-- {{- $pages = where site.RegularPages "Type" "in" site.Params.mainSections }} -->
+{{- $pages = where site.RegularPages "Type" "!=" "special" }}
 {{- $pages = where $pages "Params.hiddenInHomeList" "!=" "true"  }}
 {{- end }}
 
