update single.html layout

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -42,7 +42,7 @@
   </div>
   {{- end }}
 
-  <section id="comments">
+  <div id="comments">
     <script src="https://giscus.app/client.js"
       data-repo="RoaraeonLiou/roaraeonliou.github.io"
       data-repo-id="R_kgDOMIxQ4w"
@@ -59,7 +59,7 @@
       crossorigin="anonymous"
       async>
     </script>
-  </section>
+  </div>
 
   <footer class="post-footer">
     {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
