--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -42,6 +42,39 @@
   </div>
   {{- end }}
 
+  <!-- <div id="comments">
+    <script src="https://giscus.app/client.js"
+      data-repo="RoaraeonLiou/roaraeonliou.github.io"
+      data-repo-id="R_kgDOMIxQ4w"
+      data-category="Announcements"
+      data-category-id="DIC_kwDOMIxQ484CgZUR"
+      data-mapping="title"
+      data-strict="1"
+      data-reactions-enabled="1"
+      data-emit-metadata="0"
+      data-input-position="top"
+      data-theme="preferred_color_scheme"
+      data-lang="zh-CN"
+      data-loading="lazy"
+      crossorigin="anonymous"
+      async>
+    </script>
+  </div> -->
+
+  <footer class="post-footer">
+    {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
+    <ul class="post-tags">
+      {{- range ($.GetTerms $tags) }}
+      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
+      {{- end }}
+    </ul>
+    {{- if (.Param "ShowPostNavLinks") }}
+    {{- partial "post_nav_links.html" . }}
+    {{- end }}
+    {{- if (and site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
+    {{- partial "share_icons.html" . -}}
+    {{- end }}
+  </footer>
   <div id="comments">
     <script src="https://giscus.app/client.js"
       data-repo="RoaraeonLiou/roaraeonliou.github.io"
@@ -60,22 +93,6 @@
       async>
     </script>
   </div>
-
-  <footer class="post-footer">
-    {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
-    <ul class="post-tags">
-      {{- range ($.GetTerms $tags) }}
-      <li><a href="{{ .Permalink }}">{{ .LinkTitle }}</a></li>
-      {{- end }}
-    </ul>
-    {{- if (.Param "ShowPostNavLinks") }}
-    {{- partial "post_nav_links.html" . }}
-    {{- end }}
-    {{- if (and site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
-    {{- partial "share_icons.html" . -}}
-    {{- end }}
-  </footer>
-
   {{- if (.Param "comments") }}
   {{- partial "comments.html" . }}
   {{- end }}
